# ZSC-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run_simulations.py  test_story.txt
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/asset/: route.ts
apps/web/src/app/api/characters/: route.ts
apps/web/src/app/api/characters/generate/: route.ts
apps/web/src/app/api/pipeline/: route.ts
apps/web/src/app/api/pipeline/approve/: route.ts
apps/web/src/app/api/pipeline/regenerate/: route.ts
apps/web/src/app/api/style-infer/: route.ts
apps/web/src/app/characters/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/storyboard/: page.tsx
config/: default_config.yaml  example_episode.yaml  sim_episode.yaml
scripts/: deploy_cloud_run.sh  setup_gcp.sh
src/: cloud_entrypoint.py  main.py
src/assembly/: stitcher.py
src/generation/: generate_single.py  keyframe_gen.py  video_gen.py
src/models/: episode.py  generation.py
src/story/: decomposer.py  prompt_writer.py  style_analyzer.py
src/utils/: gcp_client.py  model_resolver.py  storage.py
stories/: sim_01_neon_ronin.txt  sim_02_sky_garden.txt  sim_03_last_train.txt
templates/: image_prompt.txt  qa_review.txt  shot_planning.txt  story_decomposition.txt  video_prompt.txt
